--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="home">
 <head>
 	<title>Home - StarLink</title>
 
@@ -28,27 +28,12 @@
 	<!-- JQuery/JavaScript -->
 	<script type="text/javascript" src="js/events.js"></script>
 
-
 </head>
-<body ng-app="home" ng-controller="indexCtrl">
-
-	<!-- <nav class="header navbar navbar-fixed-top">
-		<div class="container-fluid">
-		<div class="navbar-brand">Logo</div>
-		<div class="navContainer container-fluid">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact Us</a></li>
-			</ul>
-		</div>
-			<div id="loginContainer"><span class="glyphicon glyphicon-user">Login</span></div>	
-		</div>
-	</nav> -->
+<body ng-controller="indexCtrl">
 
 	<menu-bar></menu-bar>
 
-	<div class="container-fluid"></div>
+	<div class="container-fluid">Vlah</div>
 
 	<div class="footer container-fluid">&copy; Crystal R. Williams</div>
 
