--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
 
 	<menu-bar></menu-bar>
 
-	<div class="container-fluid">Vlah</div>
+	<div class="container-fluid">Some text</div>
 
 	<div class="footer container-fluid">&copy; Crystal R. Williams</div>
 
