--- a/views/profile.html
+++ b/views/profile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="home" ng-cloak>
+<html ng-app="home">
 <head>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Dashboard - StarLink</title>
+	<title>Profile - StarLink</title>
 
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -32,7 +32,7 @@
 
 
 </head>
-<body ng-controller="dashCtrl">
+<body ng-controller="profCtrl">
 
 <menu-bar>
 	<div>User Image</div>
@@ -46,30 +46,25 @@
 		</div>
 
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			<div class="row col-md-10 col-md-offset-1 first-row">
-					<div class="dash-boxes col-md-5" id="todo">
-						<div class="boxTitle">To-Do List</div>
-						<div class="boxContent">Placeholder</div>	
-					</div>		
+			<div class="row col-md-10">
 
-					<div class="dash-boxes col-md-5 col-md-offset-1" id="calendar">
-						<div class="boxTitle">Calendar</div>
-						<div class="boxContent">Placeholder</div>	
-					</div>					
+				<div id="bigUserImg">User Image</div>
+
+				<form>
+					<p>Name <input type="text" name="name" id="name" disabled></p>
+					<p>School <input type="text" name="school" id="school"></p>
+					<p>Email <input type="text" name="email" id="email"></p>
+					<p>Username <input type="text" name="user" id="user">
+					<p>Password <input type="password" name="pass" id="pass">
+					   Confirm Password <input type="password" name="pass" id="pass"></p>
+					<p>Phone <input type="text" name="phone" id="phone"></p>
+
+					<button>Sumbit</button>				
+
+				</form>
+
+			
 			</div>
-
-			<div class="row col-md-10 col-md-offset-1">
-				<div class="dash-boxes col-md-5 id="scholarships">
-					<div class="boxTitle">Scholarships</div>
-					<div class="boxContent">Placeholder</div>	
-				</div>
-
-				<div class="dash-boxes col-md-5 col-md-offset-1" id="messages">
-					<div class="boxTitle">Messages</div>
-					<div class="boxContent">Placeholder</div>	
-				</div>					
-			</div>
-	
 		</div>	
 	</div>
 
