--- a/views/register.html
+++ b/views/register.html
@@ -35,16 +35,16 @@
 <div class="container-fluid">
 	<form>
 		<div class="formTitle">User Registration</div>
-		<p>First Name: <input type="text" name="firstName" id="firstName">
-		   Last Name: <input type="text" name="lastName" id="lastName"></p>
+		<p>First Name: <input type="text" name="firstName" id="firstName" ng-model="firstName">
+		   Last Name: <input type="text" name="lastName" id="lastName" ng-model="lastName"></p>
 
-		<p>Username: <input type="text" name="username" id="username"></p>
-		<p>Password: <input type="password" name="pass" id="pass"></p>
+		<p>Username: <input type="text" name="username" id="username" ng-model="username"></p>
+		<p>Password: <input type="password" name="pass" id="pass" ng-model="pass"></p>
 		<p>Confirm Password: <input type="password" name="confPass" id="confPass"></p>
-		<p>Email: <input type="text" name="email" id="email"></p>
-		<p>School: <input type="text" name="school" id="school"></p>
+		<p>Email: <input type="text" name="email" id="email" ng-model="email"></p>
+		<p>School: <input type="text" name="school" id="school" ng-model="school"></p>
 		<p>Account Type: 
-		<select required>
+		<select ng-model="accType" required>
 			<option value=""></option>
 			<option value="stud">Student</option>
 			<option value="coach">Coach</option>
