--- a/views/uploads.html
+++ b/views/uploads.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="home" ng-cloak>
+<html ng-app="home">
 <head>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,29 +46,9 @@
 		</div>
 
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			<div class="row col-md-10 col-md-offset-1 first-row">
-					<div class="dash-boxes col-md-5" id="todo">
-						<div class="boxTitle">To-Do List</div>
-						<div class="boxContent">Placeholder</div>	
-					</div>		
-
-					<div class="dash-boxes col-md-5 col-md-offset-1" id="calendar">
-						<div class="boxTitle">Calendar</div>
-						<div class="boxContent">Placeholder</div>	
-					</div>					
-			</div>
-
-			<div class="row col-md-10 col-md-offset-1">
-				<div class="dash-boxes col-md-5 id="scholarships">
-					<div class="boxTitle">Scholarships</div>
-					<div class="boxContent">Placeholder</div>	
-				</div>
-
-				<div class="dash-boxes col-md-5 col-md-offset-1" id="messages">
-					<div class="boxTitle">Messages</div>
-					<div class="boxContent">Placeholder</div>	
-				</div>					
-			</div>
+			<div class="row col-md-10">
+				<button class="btn btn-default"><span class="glyphicon glyphicon-paperclip"> Upload</span></button>
+			</div>	
 	
 		</div>	
 	</div>
