--- a/public/includes/menuBar.html
+++ b/public/includes/menuBar.html
@@ -15,14 +15,20 @@
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact Us</a></li>
 			</ul>
-			<div id="loginContainer" class="nav navbar-right"><div ng-click="" class="glyphicon glyphicon-user" style="color: #FFF">Login</div></div>	
+			<div id="loginContainer" class="nav navbar-right"><div ng-click="toggle()" class="pointer glyphicon glyphicon-user" style="color: #FFF">Login</div></div>	
 		</div>
 		
 	</div>
 </nav>
 		
-<div id="loginBox">
-	<p>Username: <input type="text" id="user" name="user"></p>
-	<p>Password: <input type="text" id="pass" name="pass"></p>
-	<button id="btnLogin" ng-click="">Login</button>
+<!-- <div id="loginBox" class="ng-hide animate-show"> -->
+<div id="loginBox" ng-show="showLogin">
+	<h3>Member Login</h3>
+	<form>
+		<div class="form-group">Username <input type="text" class="form-control" id="user" ng-model="user" name="user" required></div>
+		<div class="form-group">Password <input type="password" class="form-control" name="pass" id="pass" ng-model="pass"  required></div>
+		<button class="btn btn-default btn-danger" id="btnLogin" ng-click="logMeIn(user, pass)">Login</button>
+	</form>
+	<p id="loginRegisterLink"><a href="/register">Register</a></p>
+
 </div>
