--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,11 @@
 </head>
 <body ng-controller="indexCtrl">
 
-	<menu-bar></menu-bar>
+	<!-- <menu-bar></menu-bar> -->
+
+	<div ng-controller="menubarCtrl" ng-include="'includes/menuBar.html'">
+		<ng-include></ng-include>
+	</div>
 
 	<div class="container-fluid">Some text</div>
 
@@ -40,10 +44,8 @@
 	<!-- modules -->
 	<script type="text/javascript" src="js/app.js"></script>
 
-	<!-- directives -->
-	<script type="text/javascript" src="js/directives/menuBar.js"></script>
-
 	<!-- controllers -->
 	<script type="text/javascript" src="js/controllers/homeController.js"></script>
+	<script type="text/javascript" src="js/controllers/menuBarController.js"></script>
 </body>
 </html>
