login/logout fully functional

--- a/public/includes/menuBar.html
+++ b/public/includes/menuBar.html
@@ -15,7 +15,9 @@
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact Us</a></li>
 			</ul>
-			<div id="loginContainer" class="nav navbar-right"><div ng-click="toggle()" class="pointer glyphicon glyphicon-user" style="color: #FFF">Login</div></div>	
+			<div id="loginContainer" class="nav navbar-right">
+				<div ng-click="toggle()" class="pointer glyphicon glyphicon-user" style="color: #FFF">Login</div>
+			</div>	
 		</div>
 		
 	</div>
@@ -30,5 +32,4 @@
 		<button class="btn btn-default btn-danger" id="btnLogin" ng-click="logMeIn(user, pass)">Login</button>
 	</form>
 	<p id="loginRegisterLink"><a href="/register">Register</a></p>
-
 </div>
