--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -11,6 +11,6 @@
 
 			<ul class="nav nav-sidebar bottom-ul">
 				<!--<li>Change Password</li>-->
-				<li><a href="#">Logout</a></li>
+				<li><a href="/logout">Logout</a></li>
 				<li>&copy; Crystal R. Williams</li>
 			</ul>
