--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -82,10 +82,11 @@
 <script type="text/javascript" src="js/app.js"></script>
 
 <!-- directives -->
-<script type="text/javascript" src="js/directives/menuBar.js"></script>
+<!-- <script type="text/javascript" src="js/directives/menuBar.js"></script> -->
 
 <!-- controllers -->
 <script type="text/javascript" src="js/controllers/dashboardController.js"></script>
+<script type="text/javascript" src="js/controllers/menuBarController.js"></script>
 
 </body>
 </html>
