--- a/views/students.html
+++ b/views/students.html
@@ -60,11 +60,9 @@
 <!-- modules -->
 <script type="text/javascript" src="js/app.js"></script>
 
-<!-- directives -->
-<script type="text/javascript" src="js/directives/menuBar.js"></script>
-
 <!-- controllers -->
 <script type="text/javascript" src="js/controllers/dashboardController.js"></script>
+<script type="text/javascript" src="js/controllers/menuBarController.js"></script>
 
 </body>
 </html>
