--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -1,16 +1,20 @@
-			<ul class="nav nav-sidebar">
-				<li><a href="/dash"><span class="glyphicon glyphicon-home">Dashboard</span></a></li>
-				<li><a href="/profile"><span class="glyphicon glyphicon-pencil">Profile</span>
+		<div id="outer-container">
+			<ul class="nav nav-sidebar" id="top-ul">
+				<li><a href="#/dash"><span class="glyphicon glyphicon-home"> Dashboard</span></a></li>
+				<li><a href="#/profile"><span class="glyphicon glyphicon-pencil"> Profile</span></a>
 					<ul>
-						<li><span class="glyphicon glyphicon-cog">Change Password</span></li>
-					</ul>
+						<li><span class="glyphicon glyphicon-cog"> Change Password</span></li>
 					</ul></li>
-				<li><a href="/uploads">Uploads</a></li>
-				<li>Scholarships</li>
+				<li><a href="#/uploads"><span class="glyphicon glyphicon-open"> Uploads</span></a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-education"> Scholarships</span></a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-list-alt"> Students</span></a></li>
 			</ul>
-
-			<ul class="nav nav-sidebar bottom-ul">
+			<div id="bottom-section">
+			<div id="bottom-aligner"></div>
+			<ul class="nav nav-sidebar text-center" id="bottom-ul">
 				<!--<li>Change Password</li>-->
 				<li><a href="/logout">Logout</a></li>
 				<li>&copy; Crystal R. Williams</li>
 			</ul>
+			</div>
+		</div>	
