--- a/views/old/home.html
+++ b/views/old/home.html
@@ -33,13 +33,13 @@
 
 	<!-- <menu-bar></menu-bar> -->
 
-	<div ng-controller="menubarCtrl" ng-include="'includes/menuBar.html'">
+	<div class="menuHolder" ng-controller="menubarCtrl" ng-include="'includes/menuBar.html'">
 		<ng-include></ng-include>
 	</div>
 
 	<div class="container-fluid">Some text</div>
 
-	<div class="footer container-fluid">&copy; Crystal R. Williams</div>
+	<div class="footer text-center container-fluid">Copyright &copy; Crystal R. Williams</div>
 
 	<!-- modules -->
 	<script type="text/javascript" src="js/app.js"></script>
