--- a/views/uploads.html
+++ b/views/uploads.html
@@ -1,71 +1,11 @@
-<!DOCTYPE html>
-<html ng-app="home">
-<head>
+<div class="row col-md-10 text-center">
+	<!-- <button class="btn btn-default"><span class="glyphicon glyphicon-paperclip"> Upload</span></button> -->
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Dashboard - StarLink</title>
-
-	<!-- JQuery -->
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-
-
-	<!-- BootStrap       -->
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
-	<!---        AngularJS      -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-
-	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
-
-	<!-- JQuery/JavaScript -->
-	<script type="text/javascript" src="js/events.js"></script>
-
-
-</head>
-<body ng-controller="dashCtrl">
-
-<menu-bar>
-	<div>User Image</div>
-</menu-bar>
-
-<div class="container-fluid">
-	
-	<div class="row">
-		<div class="col-sm-3 col-md-2 sidebar" ng-include="'includes/sidebar.html'">
-			<ng-include></ng-include>
+	<form action="" method="post" class="dropzone" enctype="multipart/form-data">
+		<div class="dz-default dz-message">
+			<span>Drop files here to upload</span>
 		</div>
-
-		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			<div class="row col-md-10">
-				<button class="btn btn-default"><span class="glyphicon glyphicon-paperclip"> Upload</span></button>
-			</div>	
+	</form>
+	<input type="file" name="file" class="dz-hidden-input" multiple="multiple">
+</div>	
 	
-		</div>	
-	</div>
-
-</div>
-		
-
-
-
-<!-- modules -->
-<script type="text/javascript" src="js/app.js"></script>
-
-<!-- directives -->
-<script type="text/javascript" src="js/directives/menuBar.js"></script>
-
-<!-- controllers -->
-<script type="text/javascript" src="js/controllers/dashboardController.js"></script>
-
-</body>
-</html>
