secure pages now works

--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -1,13 +1,13 @@
-		<div id="outer-container">
+		<div id="outer-container" ng-controller="menubarCtrl">
 			<ul class="nav nav-sidebar" id="top-ul">
 				<li><a href="#/dash"><span class="glyphicon glyphicon-home"> Dashboard</span></a></li>
-				<li><a href="#/profile"><span class="glyphicon glyphicon-pencil"> Profile</span></a>
+				<li><a ui-sref="profile({username: $scope.username})"><span class="glyphicon glyphicon-pencil"> Profile</span></a>
 					<ul>
 						<li><span class="glyphicon glyphicon-cog"> Change Password</span></li>
 					</ul></li>
 				<li><a href="#/uploads"><span class="glyphicon glyphicon-open"> Uploads</span></a></li>
 				<li><a href="#"><span class="glyphicon glyphicon-education"> Scholarships</span></a></li>
-				<li><a href="#"><span class="glyphicon glyphicon-list-alt"> Students</span></a></li>
+				<li><a href="#/students"><span class="glyphicon glyphicon-list-alt"> Students</span></a></li>
 			</ul>
 			<div id="bottom-section">
 			<div id="bottom-aligner"></div>
