--- a/views/profile.html
+++ b/views/profile.html
@@ -1,10 +1,10 @@
-<div class="row col-md-10">
+<div ng-controller="profileCtrl" class="row col-md-10">
 
 	<div id="bigUserImg">User Image</div>
 
 	<form>
-		<p>Name <input type="text" name="name" id="name" disabled></p>
-		<p>School <input type="text" name="school" id="school"></p>
+		<p>Name <input type="text" name="name" id="name" ng-model="name" disabled></p>
+		<p>School <input type="text" name="school" id="school" ng-model="school"></p>
 		<p>Email <input type="text" name="email" id="email"></p>
 		<p>Username <input type="text" name="user" id="user">
 		<p>Password <input type="password" name="pass" id="pass">
