--- a/public/views/students.html
+++ b/public/views/students.html
@@ -1,4 +1,4 @@
-<div ng-controller="studentCtrl" class="row col-md-10 col-md-offset-1 text-center" ngcloak>
+<div ng-controller="studentCtrl" class="row col-md-10 col-md-offset-1 text-center" ng-cloak>
 
 <h2>Students</h2>
 
