--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,39 +1,4 @@
-<!DOCTYPE html>
-<html ng-app="home">
-<head>
-	<title>Account Registration - StarLink</title>
-
-	<!-- JQuery -->
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-
-
-	<!-- BootStrap       -->
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-	<!---        AngularJS      -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-
-	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
-
-	<!-- JQuery/JavaScript -->
-	<script type="text/javascript" src="js/events.js"></script>
-
-</head>
-<body ng-controller="registerCtrl" class=" pagesBgColor">
-
-<menu-bar></menu-bar>
-
-<div class="container" >
-
+<div ng-controller="registerCtrl" class="pagesBgColor">
 	<modal visible="showModal"></modal>
 
 	<div id="registerForm">
@@ -84,19 +49,4 @@
 			<p class="text-center"><button class="btn btn-default btn-danger" ng-click="registerMe()">Register</button></p>   
 		</form>
 	</div>
-</div>
-
-<div class="footer container-fluid">&copy; Crystal R. Williams</div>
-
-<!-- modules -->
-<script type="text/javascript" src="js/app.js"></script>
-
-<!-- directives -->
-<script type="text/javascript" src="js/directives/menuBar.js"></script>
-<script type="text/javascript" src="js/directives/modal.js"></script>
-
-<!-- controllers -->
-<script type="text/javascript" src="js/controllers/registerController.js"></script>
-
-</body>
-</html>
+</div>	
