added link to register controller

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,4 +1,4 @@
-<div ng-controller="registerCtrl" class="pagesBgColor">
+<div ng-controller="registerCtrl" class="pagesBgColor" ngcloak>
 	<modal visible="showModal"></modal>
 
 	<div id="registerForm">
