modified register url

--- a/public/includes/menuBar.html
+++ b/public/includes/menuBar.html
@@ -45,5 +45,5 @@
 		<div class="form-group">Password <input type="password" class="form-control" name="pass" id="pass" ng-model="pass"  required></div>
 		<button class="btn btn-default btn-danger" id="btnLogin" ng-click="logMeIn(user, pass)">Login</button>
 	</form>
-	<p id="loginRegisterLink"><a href="/register">Register</a></p>
+	<p id="loginRegisterLink"><a href="#/register">Register</a></p>
 </div>
