--- a/public/views/students.html
+++ b/public/views/students.html
@@ -16,7 +16,7 @@
 			<td class="text-left">{{student.name}}</td>
 			<td class="text-left">{{student.email}}</td>
 			<td class="text-left">{{student.school}}</td>
-			<td class="text-left"></td>
+			<td class="text-left">{{student.phone}}</td>
 		</tr>
 	</table>
 </div>
