--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,52 +1,61 @@
-<div ng-controller="registerCtrl" class="pagesBgColor" ngcloak>
-	<modal visible="showModal"></modal>
+<div class="container">
+	<div ng-controller="registerCtrl" class="pagesBgColor" ngcloak>
+		<modal visible="showModal"></modal>
 
-	<div id="registerForm">
-		<h2 class="text-center">User Registration</h2>
-		<form>
-			<div class="form-group floatLeft">
-				<label for="firstName">First Name </label>
-				<input type="text" class="form-control" name="firstName" id="firstName" ng-model="firstName" required>
-			</div>
+		<div id="registerForm">
+			<h2 class="text-center">User Registration</h2>
+			<form>
+				<div class="form-group floatLeft">
+					<label for="firstName">First Name </label>
+					<input type="text" class="form-control" name="firstName" id="firstName" ng-model="firstName" required>
+				</div>
 
-			<div class="form-group floatLeft">
-			  <label for="lastName"> Last Name </label>
-			  <input type="text" class="form-control" name="lastName" id="lastName" ng-model="lastName" required>
-			 </div>
+				<div class="form-group floatLeft">
+				  <label for="lastName"> Last Name </label>
+				  <input type="text" class="form-control" name="lastName" id="lastName" ng-model="lastName" required>
+				 </div>
 
-			<div class="form-group clear">
-				<label for="username">Username </label>
-				<input type="text" class="form-control" name="username" id="username" ng-model="username" required>
-			</div>
+				<div class="form-group clear">
+					<label for="username">Username </label>
+					<input type="text" class="form-control" name="username" id="username" ng-model="username" required>
+				</div>
 
-			<div class="form-group floatLeft">
-				<label for="pass">Password </label>
-				<input type="password" class="form-control" name="pass" id="pass" ng-model="pass" required>
-			</div>
+				<div class="form-group floatLeft">
+					<label for="pass">Password </label>
+					<input type="password" class="form-control" name="pass" id="pass" ng-model="pass" required>
+				</div>
 
-			<div class="form-group floatLeft">
-				<label for="confPass">Confirm Password </label>
-				<input type="password" class="form-control" name="confPass" id="confPass" required>
-			</div>
+				<div class="form-group floatLeft">
+					<label for="confPass">Confirm Password </label>
+					<input type="password" class="form-control" name="confPass" id="confPass" required>
+				</div>
 
-			<div class="form-group clear">
-				<label for="email">Email </label>
-				<input type="text" class="form-control" name="email" id="email" ng-model="email" required>
-			</div>
-				
-			<div class="form-group">
-				<label for="school">School </label>
-				<input type="text" class="form-control" name="school" id="school" ng-model="school" required>
-			</div>
+				<div class="form-group clear">
+					<label for="email">Email </label>
+					<input type="text" class="form-control" name="email" id="email" ng-model="email" required>
+				</div>
 
-			<p><label for="accType">Account Type </label>
-			<select ng-model="accType" class="form-control" required>
-				<option value=""></option>
-				<option value="stud">Student</option>
-				<option value="coach">Coach</option>
-			</select></p>
+				<div class="form-group clear">
+					<label for="phone">Phone </label>
+					<input type="text" class="form-control" name="phone" id="phone" ng-model="phone" required>
+				</div>				
+					
+				<div class="form-group">
+					<label for="school">School </label>
+					<input type="text" class="form-control" name="school" id="school" ng-model="school" required>
+				</div>
 
-			<p class="text-center"><button class="btn btn-default btn-danger" ng-click="registerMe()">Register</button></p>   
-		</form>
-	</div>
-</div>	
+				<p><label for="accType">Account Type </label>
+				<select ng-model="accType" class="form-control" required>
+					<option value=""></option>
+					<option value="stud">Student</option>
+					<option value="coach">Coach</option>
+				</select></p>
+
+				<p class="text-center"><button class="btn btn-default btn-danger" ng-click="registerMe()">Register</button></p>   
+			</form>
+		</div>
+	</div>	
+</div>
+
+<div class="footer text-center container-fluid">Copyright &copy; Crystal R. Williams</div>
