download url is up

--- a/public/views/students.html
+++ b/public/views/students.html
@@ -10,6 +10,7 @@
 			<th>Email</th>
 			<th>School</th>
 			<th>Phone</th>
+			<th>Uploads</th>
 		</tr>
 		<tr ng-repeat="student in students">
 			<td>{{$index + 1}}</td>
@@ -17,6 +18,7 @@
 			<td class="text-left">{{student.email}}</td>
 			<td class="text-left">{{student.school}}</td>
 			<td class="text-left">{{student.phone}}</td>
+			<td class="text-left"><p ng-repeat="upload in student.uploads"><a href="{{upload.path}}" class="uploadLinks">{{upload.name}}</a></p></td>
 		</tr>
 	</table>
 </div>
