--- a/public/includes/menuBar.html
+++ b/public/includes/menuBar.html
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<div class="navbar-brand"><a href="/">Logo</a></div>
+			<div class="navbar-brand"><a href="/"><img src="imgs/starlink.png" ></a></div>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
 			<ul class="nav navbar-nav navbar-left" id="menubar-ul">
