--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,24 +1,24 @@
 <div class="row col-md-10 col-md-offset-1 first-row">
 		<div class="dash-boxes col-md-5" id="todo">
 			<div class="boxTitle">To-Do List</div>
-			<div class="boxContent">Placeholder</div>	
+			<div class="boxContent">No to-dos.</div>	
 		</div>		
 
 		<div class="dash-boxes col-md-5 col-md-offset-1" id="calendar">
 			<div class="boxTitle">Calendar</div>
-			<div class="boxContent">Placeholder</div>	
+			<div class="boxContent">No Events.</div>	
 		</div>					
 </div>
 
 <div class="row col-md-10 col-md-offset-1">
 	<div class="dash-boxes col-md-5 id="scholarships">
 		<div class="boxTitle">Scholarships</div>
-		<div class="boxContent">Placeholder</div>	
+		<div class="boxContent">No tasks added.</div>	
 	</div>
 
 	<div class="dash-boxes col-md-5 col-md-offset-1" id="messages">
 		<div class="boxTitle">Messages</div>
-		<div class="boxContent">Placeholder</div>	
+		<div class="boxContent">No Messages.</div>	
 	</div>					
 </div>
 	
