--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,8 @@
-<div class="container-fluid" ng-controller="indexCtrl">Some text</div>
+<!-- <div class="container-fluid" ng-controller="indexCtrl"> -->
+<div class="container-fluid" ng-controller="homeCtrl">
+	<login-modal visible="showModal"></login-modal>
+	<p>Some text</p>
+</div>
 
 <div class="footer text-center container-fluid">Copyright &copy; Crystal R. Williams</div>
 
