--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -2,19 +2,25 @@
 			<ul class="nav nav-sidebar" id="top-ul">
 				<li><a href="#/dash"><span class="glyphicon glyphicon-home"> Dashboard</span></a></li>
 				<li><a ui-sref="profile({username: $parent.username})"><span class="glyphicon glyphicon-pencil"> Profile</span></a>
-					<ul> 
+<!-- 					<ul> 
 						<li><span class="glyphicon glyphicon-cog"> Change Password</span></li>
-					</ul></li>
-				<li><a href="#/uploads"><span class="glyphicon glyphicon-open"> Uploads</span></a></li>
-				<li><a href="#"><span class="glyphicon glyphicon-education"> Scholarships</span></a></li>
-				<li><a href="#/students"><span class="glyphicon glyphicon-list-alt"> Students</span></a></li>
+					</ul> --></li>
+				<li ng-show="stud"><a href="#/uploads"><span class="glyphicon glyphicon-open"> Uploads</span></a></li>
+				<li ng-show="stud"><a href="#"><span class="glyphicon glyphicon-education"> Scholarships</span></a></li>
+				<li ng-show="coach"><a href="#/students"><span class="glyphicon glyphicon-list-alt"> Students</span></a></li>
 			</ul>
+
+<!-- 			<ul class="nav nav-sidebar" id="top-ul">
+				<li><a href="#/dash"><span class="glyphicon glyphicon-home"> Dashboard</span></a></li>
+				<li><a ui-sref="profile({username: $parent.username})"><span class="glyphicon glyphicon-pencil"> Profile</span></a></li>
+				<li><a href="#/students"><span class="glyphicon glyphicon-list-alt"> Students</span></a></li>
+			</ul> -->
+
 			<div id="bottom-section">
 			<div id="bottom-aligner"></div>
 			<ul class="nav nav-sidebar text-center" id="bottom-ul">
 				<!--<li>Change Password</li>-->
-				<li><a href="/logout">Logout</a></li>
-				<li>&copy; Crystal R. Williams {{$parent.username}}</li>
+				<li><a href="/logout">Logout</</li>
 			</ul>
 			</div>
 		</div>	
