--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -120,12 +120,16 @@ ul.nav {
 /*	border: 1px solid #000;*/
 	float: left;
 	display: inline-block;
-	height: 100%;
+/*	height: 100%;*/
 	/*padding: 5px 20px;*/
 	color: #FFF;
 	line-height: unset;
 	padding-left: 25px;
 	padding-right: 75px;
+}
+
+.navbar-brand img {
+	margin-top: 0;
 }
 
 .navContainer {
