--- a/public/includes/menuBar.html
+++ b/public/includes/menuBar.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
+			<!-- <login-modal visible="showModal"></login-modal> -->
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
@@ -41,9 +42,10 @@
 <div id="loginBox" ng-show="showLogin">
 	<h3>Member Login</h3>
 	<form>
-		<div class="form-group">Username <input type="text" class="form-control" id="user" ng-model="user" name="user" required></div>
-		<div class="form-group">Password <input type="password" class="form-control" name="pass" id="pass" ng-model="pass"  required></div>
-		<button class="btn btn-default btn-danger" id="btnLogin" ng-click="logMeIn(user, pass)">Login</button>
+		<span style="font-weight: bold; color: #FF2400" ng-show="loginWrong">Incorrect Username or Password.</span>
+		<div class="form-group">Username <input type="text" class="form-control" id="login" ng-model="login" name="login" required></div>
+		<div class="form-group">Password <input type="password" class="form-control" name="password" id="password" ng-model="password"  required></div>
+		<button class="btn btn-default btn-danger" id="btnLogin" ng-click="logMeIn(login, password)">Login</button>
 	</form>
 	<p id="loginRegisterLink"><a href="#/register">Register</a></p>
 </div>
